--- a/AppBolivar/Src/Administracion UsuarioV2.fx.yaml
+++ b/AppBolivar/Src/Administracion UsuarioV2.fx.yaml
@@ -7620,6 +7620,17 @@
             Button3_3 As button:
                 BorderColor: =RGBA(255, 0, 0, 1)
                 Color: =RGBA(255, 0, 0, 1)
+                DisplayMode: |-
+                    =If(
+                        CountRows(
+                            Filter(
+                                'public.Medical_Center_S&E_Relacion',
+                                id_sede = _varDeleteSedes.id
+                            )
+                        ) > 0,
+                        DisplayMode.Disabled,
+                        DisplayMode.Edit
+                    )
                 Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.'Segoe UI'
                 HoverFill: =RGBA(255, 0, 0, 0.25)
@@ -7847,10 +7858,21 @@
             Button3_5 As button:
                 BorderColor: =RGBA(255, 0, 0, 1)
                 Color: =RGBA(255, 0, 0, 1)
+                DisplayMode: |-
+                    =If(
+                        CountRows(
+                            Filter(
+                                'public.Medical_Center_R&D_Relacion',
+                                id_se_relacion = _deleteR.id
+                            )
+                        ) > 0,
+                        DisplayMode.Disabled,
+                        DisplayMode.Edit
+                    )
                 Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.'Segoe UI'
                 HoverFill: =RGBA(255, 0, 0, 0.25)
-                OnSelect: |-
+                OnSelect: |
                     =Remove('public.Medical_Center_S&E_Relacion' , GalleryMEspecialidad.Selected);
                     RemoveIf('public.Medical_Center_Especialidad', id = _deleteR.id_especialidad);
                     UpdateContext({_varDeleteEs: false});
