--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -15427,7 +15427,7 @@
 
             Gallery6_15 As gallery.galleryVertical:
                 FillPortions: =0
-                Height: =250
+                Height: =150
                 Items: =var_Tratamiento_a_Usar
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =200
@@ -15444,6 +15444,7 @@
                 Label30 As label:
                     Text: |-
                         =ThisItem.Medicamento & ": " & ThisItem.Descripción
+                    Visible: =tabEscogerTratServ.Selected.desc="Tratamiento"
                     Width: =250
                     ZIndex: =2
 
@@ -15451,14 +15452,69 @@
                     Height: =23
                     OnSelect: =Select(Parent)
                     Text: =LookUp('public.Medical_Center_Especialidad',id=LookUp('public.Medical_Center_S&E_Relacion',id=EspecialidadTicket).id_especialidad,Especialidad)
-                    X: =286
+                    Visible: =tabEscogerTratServ.Selected.desc="Tratamiento"
+                    X: =250
                     ZIndex: =3
 
                 Label63 As label:
                     Height: =23
                     OnSelect: =Select(Parent)
-                    Text: =ThisItem.Cod_4_Diagnostico
+                    Text: =LookUp('public.Medical_Center_Diagnostico',id=LookUp('public.Medical_Center_S&E_Relacion',id=EspecialidadTicket).id_especialidad,Especialidad)
+                    Visible: =tabEscogerTratServ.Selected.desc="Tratamiento"
                     X: =451
+                    ZIndex: =4
+
+            Container40 As groupContainer.manualLayoutContainer:
+                LayoutMinHeight: =155
+                LayoutMinWidth: =250
+                Visible: =tabEscogerTratServ.Selected.desc="Tratamiento"
+                ZIndex: =4
+
+                Label61 As label:
+                    Font: =Font.'Segoe UI'
+                    FontWeight: =FontWeight.Semibold
+                    Text: ="Medicamento"
+                    X: =4
+                    ZIndex: =1
+
+                Label15 As label:
+                    Font: =Font.'Segoe UI'
+                    FontWeight: =FontWeight.Semibold
+                    Text: ="Descripción de Consumo"
+                    Width: =218
+                    X: =275
+                    ZIndex: =2
+
+                Dropdown1 As dropdown:
+                    ChevronBackground: =RGBA(0, 0, 0, 1)
+                    Items: |-
+                        =Filter(Filter('public.Medical_Center_Medicamentos',Or(id_sede = _varSede.id,IsBlank(Consultorio))),Or(
+                         Upper(Dropdown1.AccessibleLabel) in Upper(medicamento) 
+                    Width: =168
+                    Y: =40
+                    ZIndex: =3
+
+                EvidenciasButton_19 As button:
+                    BorderColor: =ColorFondoBoton
+                    Color: =ColorFondoBoton
+                    Fill: =Color.Transparent
+                    Font: =Font.'Segoe UI'
+                    FontWeight: =FontWeight.Bold
+                    Height: =49
+                    HoverBorderColor: =ColorFondoBoton
+                    HoverColor: =ColorFondoBoton
+                    HoverFill: =RGBA(255, 255, 255, 1)
+                    OnSelect: =
+                    RadiusBottomLeft: =8
+                    RadiusBottomRight: =8
+                    RadiusTopLeft: =8
+                    RadiusTopRight: =8
+                    Size: =12
+                    Text: ="+  NUEVO MEDICAMENTO"
+                    Visible: =If(IsBlank(galDescansoMedico.Selected) && _detalles="medicamentos",true,false)
+                    Width: =232
+                    X: =168
+                    Y: =103
                     ZIndex: =4
 
             Container37 As groupContainer.verticalAutoLayoutContainer:
@@ -15466,10 +15522,11 @@
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
-                ZIndex: =4
+                ZIndex: =5
 
                 conEditTratamiento As groupContainer.verticalAutoLayoutContainer:
                     LayoutDirection: =LayoutDirection.Vertical
+                    LayoutJustifyContent: =LayoutJustifyContent.End
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
@@ -15519,6 +15576,7 @@
                     ZIndex: =2
 
                     conEditServicio_1 As groupContainer.verticalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
                         FillPortions: =0
                         Height: =30
                         LayoutAlignItems: =LayoutAlignItems.Center
@@ -15556,6 +15614,7 @@
                             ZIndex: =2
 
                     conEditServicio_2 As groupContainer.verticalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutDirection: =LayoutDirection.Vertical
                         LayoutMinHeight: =100
                         LayoutMinWidth: =250
@@ -15672,10 +15731,6 @@
                                     X: =930
                                     Y: =20
                                     ZIndex: =3
-
-            Label15 As label:
-                Text: ="Text"
-                ZIndex: =5
 
         iconCerrarRegistroPago_6 As icon.Cancel:
             Color: =RGBA(0, 0, 0, 1)
