--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -206,7 +206,7 @@
                     Visible: =_detalles="medicamentos"
                     Width: =If(varAnchoInfPac,350,450)
                     X: =20
-                    Y: =80
+                    Y: =90
                     ZIndex: =6
 
                     Label14_3 As label:
@@ -7261,8 +7261,8 @@
         Text: ="USAR TRATAMIENTO"
         Visible: =_varTratamientoTramiento
         Width: =360
-        X: =491
-        Y: =674
+        X: =492
+        Y: =683
         ZIndex: =174
 
     Icon5_10 As icon.Cancel:
@@ -15465,7 +15465,8 @@
 
                 TextInput51_2 As text:
                     BorderColor: =RGBA(0, 0, 0, 1)
-                    Default: =""
+                    Default: |-
+                        =First(var_Tratamiento_a_Usar).Medicamento & ": " & First(var_Tratamiento_a_Usar).Descripción  
                     Font: =Font.'Segoe UI'
                     Height: =38
                     RadiusBottomLeft: =0
@@ -15490,7 +15491,7 @@
 
                 TextInput51_3 As text:
                     BorderColor: =RGBA(0, 0, 0, 1)
-                    Default: =""
+                    Default: =LookUp('public.Medical_Center_Diagnostico',COD_4 = First(var_Tratamiento_a_Usar).Cod_4_Diagnostico).DESRIPCION_COD_4
                     Font: =Font.'Segoe UI'
                     Height: =38
                     RadiusBottomLeft: =0
@@ -15524,17 +15525,6 @@
                     X: =275
                     ZIndex: =2
 
-                Dropdown1 As dropdown:
-                    BorderThickness: =0
-                    ChevronBackground: =ColorFondoBoton
-                    Height: =35
-                    Items: |-
-                        =Filter(Filter('public.Medical_Center_Medicamentos',Or(id_sede = _varSede.id,IsBlank(Consultorio))),Or(
-                         Upper(Dropdown1.AccessibleLabel) in Upper(medicamento) 
-                    Width: =168
-                    Y: =40
-                    ZIndex: =3
-
                 EvidenciasButton_19 As button:
                     BorderColor: =ColorFondoBoton
                     Color: =ColorFondoBoton
@@ -15558,101 +15548,54 @@
                     Y: =196
                     ZIndex: =4
 
-                TextInput51_1 As text:
-                    BorderColor: =RGBA(0, 0, 0, 1)
-                    Default: =""
-                    Font: =Font.'Segoe UI'
-                    RadiusBottomLeft: =8
-                    RadiusBottomRight: =8
-                    RadiusTopLeft: =8
-                    RadiusTopRight: =8
-                    Size: =12
-                    Width: =275
-                    X: =275
-                    Y: =35
-                    ZIndex: =5
+                "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+                    DelayItemLoading: =true
+                    Height: =175
+                    Items: =var_Tratamiento_a_Usar
+                    Layout: =Layout.Vertical
+                    LoadingSpinner: =LoadingSpinner.Data
+                    TemplatePadding: =0
+                    TemplateSize: =54
+                    Width: =601
+                    ZIndex: =13
 
-                Image41_1 As image:
-                    Height: =30
-                    Image: =Delete
-                    OnSelect: |-
-                        =//UpdateContext({_varDUser: ThisItem});
-                        //UpdateContext({_varDUsers: true});
-                    Width: =30
-                    X: =562
-                    Y: =35
-                    ZIndex: =6
+                    Dropdown1_3 As dropdown:
+                        BorderThickness: =0
+                        ChevronBackground: =ColorFondoBoton
+                        Default: =ThisItem.Medicamento
+                        Height: =35
+                        Items: |-
+                            =//Filter(Filter('public.Medical_Center_Medicamentos',Or(id_sede = _varSede.id,IsBlank(Consultorio))),Or(
+                             //Upper(Dropdown1_3.AccessibleLabel) in Upper(medicamento) 
+                            
+                             Filter('public.Medical_Center_Medicamentos',id_sede =_varSede.id)
+                        Size: =10
+                        Width: =194
+                        X: =10
+                        ZIndex: =1
 
-                Dropdown1_1 As dropdown:
-                    BorderThickness: =0
-                    ChevronBackground: =ColorFondoBoton
-                    Height: =35
-                    Items: |-
-                        =Filter(Filter('public.Medical_Center_Medicamentos',Or(id_sede = _varSede.id,IsBlank(Consultorio))),Or(
-                         Upper(Dropdown1_1.AccessibleLabel) in Upper(medicamento) 
-                    Width: =168
-                    Y: =87
-                    ZIndex: =7
+                    TextInput51_6 As text:
+                        BorderColor: =RGBA(0, 0, 0, 1)
+                        Default: =ThisItem.Descripción
+                        Font: =Font.'Segoe UI'
+                        RadiusBottomLeft: =8
+                        RadiusBottomRight: =8
+                        RadiusTopLeft: =8
+                        RadiusTopRight: =8
+                        Size: =12
+                        Width: =275
+                        X: =269
+                        ZIndex: =2
 
-                Dropdown1_2 As dropdown:
-                    BorderThickness: =0
-                    ChevronBackground: =ColorFondoBoton
-                    Items: |-
-                        =Filter(Filter('public.Medical_Center_Medicamentos',Or(id_sede = _varSede.id,IsBlank(Consultorio))),Or(
-                         Upper(Dropdown1_2.AccessibleLabel) in Upper(medicamento) 
-                    Width: =168
-                    Y: =136
-                    ZIndex: =8
-
-                TextInput51_4 As text:
-                    BorderColor: =RGBA(0, 0, 0, 1)
-                    Default: =""
-                    Font: =Font.'Segoe UI'
-                    RadiusBottomLeft: =8
-                    RadiusBottomRight: =8
-                    RadiusTopLeft: =8
-                    RadiusTopRight: =8
-                    Size: =12
-                    Width: =275
-                    X: =275
-                    Y: =87
-                    ZIndex: =9
-
-                Image41_2 As image:
-                    Height: =30
-                    Image: =Delete
-                    OnSelect: |-
-                        =//UpdateContext({_varDUser: ThisItem});
-                        //UpdateContext({_varDUsers: true});
-                    Width: =30
-                    X: =562
-                    Y: =87
-                    ZIndex: =10
-
-                TextInput51_5 As text:
-                    BorderColor: =RGBA(0, 0, 0, 1)
-                    Default: =""
-                    Font: =Font.'Segoe UI'
-                    RadiusBottomLeft: =8
-                    RadiusBottomRight: =8
-                    RadiusTopLeft: =8
-                    RadiusTopRight: =8
-                    Size: =12
-                    Width: =275
-                    X: =275
-                    Y: =136
-                    ZIndex: =11
-
-                Image41_3 As image:
-                    Height: =30
-                    Image: =Delete
-                    OnSelect: |-
-                        =//UpdateContext({_varDUser: ThisItem});
-                        //UpdateContext({_varDUsers: true});
-                    Width: =30
-                    X: =562
-                    Y: =136
-                    ZIndex: =12
+                    Image41_4 As image:
+                        Height: =30
+                        Image: =Delete
+                        OnSelect: |-
+                            =//UpdateContext({_varDUser: ThisItem});
+                            //UpdateContext({_varDUsers: true});
+                        Width: =30
+                        X: =556
+                        ZIndex: =3
 
             Container37 As groupContainer.verticalAutoLayoutContainer:
                 LayoutDirection: =LayoutDirection.Vertical
