--- a/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
+++ b/AppBolivar/Src/Atencion Cliente Citas.fx.yaml
@@ -374,7 +374,7 @@
         Default: =""
         Font: =Font.'Segoe UI'
         Height: =36
-        HintText: ="Buscar cit por nombre o DNI"
+        HintText: ="Buscar cita por nombre o DNI"
         HoverBorderColor: =ColorFade(colorPrimary,-20%)
         HoverFill: =RGBA(255, 255, 255, 1)
         OnChange: =
@@ -387,8 +387,21 @@
     gal_Citas_Pendientes As gallery.galleryVertical:
         Height: =505
         Items: |-
-            =Filter(Sort('public.Medical_Center_Ticket',fecha_cita,SortOrder.Descending),cita_finalizada=false,
-             Upper(DNITextInput.Text) in Upper(Nombre_Paciente),Estatus="En Cola",Text(fecha_cita,"dd/mm/yyyy")=Text(Today(),"dd/mm/yyyy"))
+            =Filter(
+                Sort(
+                    'public.Medical_Center_Ticket',
+                    fecha_cita,
+                    SortOrder.Descending
+                ),
+                Upper(DNITextInput.Text) in Upper(Nombre_Paciente),
+                Text(
+                    fecha_cita,
+                    "dd/mm/yyyy"
+                ) = Text(
+                    Today(),
+                    "dd/mm/yyyy"
+                ),  id_especialidad_x_sede = LookUp('public.Medical_Center_S&E_Relacion', id_sede = _varSede.id).id
+            )
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplateSize: =160
