--- a/AppBolivar/Src/Administracion UsuarioV2.fx.yaml
+++ b/AppBolivar/Src/Administracion UsuarioV2.fx.yaml
@@ -3211,6 +3211,190 @@
                 Y: =18
                 ZIndex: =4
 
+    Container7_6 As groupContainer.manualLayoutContainer:
+        BorderStyle: =BorderStyle.None
+        Fill: =RGBA(0, 0, 0, 0.23)
+        Height: =Parent.Height
+        RadiusBottomLeft: =4
+        RadiusBottomRight: =4
+        RadiusTopLeft: =4
+        RadiusTopRight: =4
+        Visible: =_varNewEspecialidd
+        Width: =Parent.Width
+        ZIndex: =150
+
+        Container7_14 As groupContainer.manualLayoutContainer:
+            BorderThickness: =2
+            Fill: =varcolor_ClaroBackgroundApp
+            Height: =560
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
+            Visible: =_varNewEspecialidd
+            Width: =400
+            X: =(Parent.Width-Self.Width)/2
+            Y: =(Parent.Height-Self.Height)/2
+            ZIndex: =1
+
+        Container19 As groupContainer.verticalAutoLayoutContainer:
+            BorderThickness: =2
+            Fill: =varcolor_ClaroBackgroundApp
+            Height: =560
+            LayoutAlignItems: =LayoutAlignItems.Stretch
+            LayoutDirection: =LayoutDirection.Vertical
+            LayoutGap: =15
+            LayoutMode: =LayoutMode.Auto
+            PaddingBottom: =20
+            PaddingLeft: =20
+            PaddingRight: =20
+            PaddingTop: =20
+            RadiusBottomLeft: =8
+            RadiusBottomRight: =8
+            RadiusTopLeft: =8
+            RadiusTopRight: =8
+            Width: =400
+            X: =(Parent.Width-Self.Width)/2
+            Y: =(Parent.Height-Self.Height)/2
+            ZIndex: =2
+
+            Label80_12 As label:
+                Font: =Font.'Segoe UI'
+                FontWeight: =FontWeight.Semibold
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =18
+                Text: ="Agregar Especialidad"
+                Width: =240
+                X: =20
+                Y: =20
+                ZIndex: =1
+
+            Label80_13 As label:
+                Font: =Font.'Segoe UI'
+                FontWeight: =FontWeight.Semibold
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =12
+                Text: ="Nombre de la especialidad"
+                Width: =260
+                X: =20
+                Y: =52
+                ZIndex: =2
+
+            tiNewSpecialty As text:
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Default: =
+                Font: =Font.'Segoe UI'
+                Height: =36
+                RadiusBottomLeft: =8
+                RadiusBottomRight: =8
+                RadiusTopLeft: =8
+                RadiusTopRight: =8
+                Size: =12
+                Width: =360
+                X: =20
+                Y: =84
+                ZIndex: =3
+
+            Label80_36 As label:
+                Color: =RGBA(246, 88, 16, 1)
+                Font: =Font.'Segoe UI'
+                FontWeight: =FontWeight.Semibold
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =12
+                Text: ="Ya existe la especialidad en la sede"
+                Visible: =LookUp('public.Medical_Center_Especialidad',Especialidad=Proper(Trim(tiNewSpecialty.Text)),id) in Filter('public.Medical_Center_S&E_Relacion',id_sede=_varAllSede.id).id_especialidad
+                Width: =100
+                X: =20
+                Y: =140
+                ZIndex: =4
+
+            Label80_14 As label:
+                Font: =Font.'Segoe UI'
+                FontWeight: =FontWeight.Semibold
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =12
+                Text: ="Plantillas H.C."
+                Width: =100
+                X: =20
+                Y: =140
+                ZIndex: =5
+
+            rdPlantillasHC As radio:
+                BorderColor: =RGBA(0, 0, 0, 0)
+                BorderStyle: =BorderStyle.None
+                FillPortions: =1
+                Items: =varPlantillasHC
+                LineHeight: =2
+                RadioBorderColor: =RGBA(0, 0, 0, 1)
+                RadioSize: =30
+                ZIndex: =6
+
+            Button28_6 As button:
+                BorderColor: =RGBA(44, 97, 112, 1)
+                BorderStyle: =BorderStyle.None
+                DisplayMode: =If(IsBlank(Trim(tiNewSpecialty.Text))||IsBlank(rdPlantillasHC.Selected.plantilla_hc),DisplayMode.Disabled,DisplayMode.Edit)
+                Fill: =RGBA(44, 97, 112, 1)
+                Font: =Font.'Segoe UI'
+                Height: =44
+                HoverFill: =RGBA(44, 97, 112, 1)
+                OnSelect: |-
+                    =Refresh('public.Medical_Center_S&E_Relacion');
+                    If(IsEmpty(Filter('public.Medical_Center_Especialidad',Especialidad=Proper(Trim(tiNewSpecialty.Text)))),
+                        Set(_relacionv,
+                            Patch('public.Medical_Center_Especialidad', Defaults('public.Medical_Center_Especialidad'),{
+                                id: First(SortByColumns('public.Medical_Center_Especialidad',"id",SortOrder.Descending)).id +1,
+                                Especialidad: Proper(Trim(tiNewSpecialty.Text))
+                            })
+                        ),
+                        Set(_relacionv,LookUp('public.Medical_Center_Especialidad',Especialidad=Proper(Trim(tiNewSpecialty.Text))))
+                    );
+                    
+                     Patch('public.Medical_Center_S&E_Relacion', Defaults('public.Medical_Center_S&E_Relacion'),{
+                    
+                       id: First(SortByColumns('public.Medical_Center_S&E_Relacion',"id",SortOrder.Descending)).id +1,
+                       id_sede: _varAllSede.id,
+                       id_especialidad: _relacionv.id,
+                       plantilla_hc:rdPlantillasHC.Selected.plantilla_hc
+                    });
+                    Select(iconCloseNewSpecialty)
+                PressedFill: =RGBA(44, 97, 112, 1)
+                RadiusBottomLeft: =8
+                RadiusBottomRight: =8
+                RadiusTopLeft: =8
+                RadiusTopRight: =8
+                Size: =14
+                Text: ="CREAR ESPECIALIDAD"
+                Width: =360
+                X: =20
+                Y: =476
+                ZIndex: =7
+
+        iconCloseNewSpecialty As icon.Cancel:
+            Color: =RGBA(0, 0, 0, 1)
+            Height: =24
+            Icon: =Icon.Cancel
+            OnSelect: |-
+                =UpdateContext({_varNewEspecialidd:false});Reset(tiNewSpecialty);Reset(rdPlantillasHC)
+            Width: =24
+            X: =Container19.X+Container19.Width-2*Self.Width
+            Y: =Container19.Y+Self.Height
+            ZIndex: =3
+
     Group43RolesV2 As group:
         Height: =5
         Width: =5
@@ -3751,7 +3935,7 @@
             Gallery15_1 As gallery.galleryVertical:
                 DelayItemLoading: =true
                 Height: =If(IsEmpty(Filter('public.Medical_Center_Roles_Maestro',Consultorio_Medico<>"")),0,98)
-                Items: =Filter('public.Medical_Center_Roles_Maestro',id_sede = _varSede.id && Consultorio_Medico <> "Bolivar")
+                Items: =Filter('public.Medical_Center_Roles_Maestro',id_sede = _varSede.id && Consultorio_Medico  = /*<>*/ "Bolivar")
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
                 TemplatePadding: =0
@@ -4626,190 +4810,6 @@
                 X: =347
                 Y: =24
                 ZIndex: =5
-
-    Container7_6 As groupContainer.manualLayoutContainer:
-        BorderStyle: =BorderStyle.None
-        Fill: =RGBA(0, 0, 0, 0.23)
-        Height: =Parent.Height
-        RadiusBottomLeft: =4
-        RadiusBottomRight: =4
-        RadiusTopLeft: =4
-        RadiusTopRight: =4
-        Visible: =_varNewEspecialidd
-        Width: =Parent.Width
-        ZIndex: =150
-
-        Container7_14 As groupContainer.manualLayoutContainer:
-            BorderThickness: =2
-            Fill: =varcolor_ClaroBackgroundApp
-            Height: =560
-            RadiusBottomLeft: =4
-            RadiusBottomRight: =4
-            RadiusTopLeft: =4
-            RadiusTopRight: =4
-            Visible: =_varNewEspecialidd
-            Width: =400
-            X: =(Parent.Width-Self.Width)/2
-            Y: =(Parent.Height-Self.Height)/2
-            ZIndex: =1
-
-        Container19 As groupContainer.verticalAutoLayoutContainer:
-            BorderThickness: =2
-            Fill: =varcolor_ClaroBackgroundApp
-            Height: =560
-            LayoutAlignItems: =LayoutAlignItems.Stretch
-            LayoutDirection: =LayoutDirection.Vertical
-            LayoutGap: =15
-            LayoutMode: =LayoutMode.Auto
-            PaddingBottom: =20
-            PaddingLeft: =20
-            PaddingRight: =20
-            PaddingTop: =20
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
-            Width: =400
-            X: =(Parent.Width-Self.Width)/2
-            Y: =(Parent.Height-Self.Height)/2
-            ZIndex: =2
-
-            Label80_12 As label:
-                Font: =Font.'Segoe UI'
-                FontWeight: =FontWeight.Semibold
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Size: =18
-                Text: ="Agregar Especialidad"
-                Width: =240
-                X: =20
-                Y: =20
-                ZIndex: =1
-
-            Label80_13 As label:
-                Font: =Font.'Segoe UI'
-                FontWeight: =FontWeight.Semibold
-                Height: =24
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Size: =12
-                Text: ="Nombre de la especialidad"
-                Width: =260
-                X: =20
-                Y: =52
-                ZIndex: =2
-
-            tiNewSpecialty As text:
-                BorderColor: =RGBA(0, 0, 0, 1)
-                Default: =
-                Font: =Font.'Segoe UI'
-                Height: =36
-                RadiusBottomLeft: =8
-                RadiusBottomRight: =8
-                RadiusTopLeft: =8
-                RadiusTopRight: =8
-                Size: =12
-                Width: =360
-                X: =20
-                Y: =84
-                ZIndex: =3
-
-            Label80_36 As label:
-                Color: =RGBA(246, 88, 16, 1)
-                Font: =Font.'Segoe UI'
-                FontWeight: =FontWeight.Semibold
-                Height: =24
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Size: =12
-                Text: ="Ya existe la especialidad en la sede"
-                Visible: =LookUp('public.Medical_Center_Especialidad',Especialidad=Proper(Trim(tiNewSpecialty.Text)),id) in Filter('public.Medical_Center_S&E_Relacion',id_sede=_varAllSede.id).id_especialidad
-                Width: =100
-                X: =20
-                Y: =140
-                ZIndex: =4
-
-            Label80_14 As label:
-                Font: =Font.'Segoe UI'
-                FontWeight: =FontWeight.Semibold
-                Height: =24
-                PaddingBottom: =0
-                PaddingLeft: =0
-                PaddingRight: =0
-                PaddingTop: =0
-                Size: =12
-                Text: ="Plantillas H.C."
-                Width: =100
-                X: =20
-                Y: =140
-                ZIndex: =5
-
-            rdPlantillasHC As radio:
-                BorderColor: =RGBA(0, 0, 0, 0)
-                BorderStyle: =BorderStyle.None
-                FillPortions: =1
-                Items: =varPlantillasHC
-                LineHeight: =2
-                RadioBorderColor: =RGBA(0, 0, 0, 1)
-                RadioSize: =30
-                ZIndex: =6
-
-            Button28_6 As button:
-                BorderColor: =RGBA(44, 97, 112, 1)
-                BorderStyle: =BorderStyle.None
-                DisplayMode: =If(IsBlank(Trim(tiNewSpecialty.Text))||IsBlank(rdPlantillasHC.Selected.plantilla_hc),DisplayMode.Disabled,DisplayMode.Edit)
-                Fill: =RGBA(44, 97, 112, 1)
-                Font: =Font.'Segoe UI'
-                Height: =44
-                HoverFill: =RGBA(44, 97, 112, 1)
-                OnSelect: |-
-                    =Refresh('public.Medical_Center_S&E_Relacion');
-                    If(IsEmpty(Filter('public.Medical_Center_Especialidad',Especialidad=Proper(Trim(tiNewSpecialty.Text)))),
-                        Set(_relacionv,
-                            Patch('public.Medical_Center_Especialidad', Defaults('public.Medical_Center_Especialidad'),{
-                                id: First(SortByColumns('public.Medical_Center_Especialidad',"id",SortOrder.Descending)).id +1,
-                                Especialidad: Proper(Trim(tiNewSpecialty.Text))
-                            })
-                        ),
-                        Set(_relacionv,LookUp('public.Medical_Center_Especialidad',Especialidad=Proper(Trim(tiNewSpecialty.Text))))
-                    );
-                    
-                     Patch('public.Medical_Center_S&E_Relacion', Defaults('public.Medical_Center_S&E_Relacion'),{
-                    
-                       id: First(SortByColumns('public.Medical_Center_S&E_Relacion',"id",SortOrder.Descending)).id +1,
-                       id_sede: _varAllSede.id,
-                       id_especialidad: _relacionv.id,
-                       plantilla_hc:rdPlantillasHC.Selected.plantilla_hc
-                    });
-                    Select(iconCloseNewSpecialty)
-                PressedFill: =RGBA(44, 97, 112, 1)
-                RadiusBottomLeft: =8
-                RadiusBottomRight: =8
-                RadiusTopLeft: =8
-                RadiusTopRight: =8
-                Size: =14
-                Text: ="CREAR ESPECIALIDAD"
-                Width: =360
-                X: =20
-                Y: =476
-                ZIndex: =7
-
-        iconCloseNewSpecialty As icon.Cancel:
-            Color: =RGBA(0, 0, 0, 1)
-            Height: =24
-            Icon: =Icon.Cancel
-            OnSelect: |-
-                =UpdateContext({_varNewEspecialidd:false});Reset(tiNewSpecialty);Reset(rdPlantillasHC)
-            Width: =24
-            X: =Container19.X+Container19.Width-2*Self.Width
-            Y: =Container19.Y+Self.Height
-            ZIndex: =3
 
     GroupEditUserv2 As group:
         Height: =5
